# zenml-shop

./: =2.2.2  pyproject.toml  requirement.txt  service.py
.zen/: config.yaml
data/: test_data.csv
mlruns/0/21904eb0611e443b99cf0561fd92aade/: meta.yaml
mlruns/0/21904eb0611e443b99cf0561fd92aade/metrics/: metric
mlruns/0/21904eb0611e443b99cf0561fd92aade/tags/: mlflow.runName
mlruns/0/2b0bce231fd94aa09917a9d414acc07d/: meta.yaml
mlruns/0/2b0bce231fd94aa09917a9d414acc07d/metrics/: metric
mlruns/0/2b0bce231fd94aa09917a9d414acc07d/tags/: mlflow.runName
mlruns/0/374f0b5214a648d4abc9348570b7ff58/: meta.yaml
mlruns/0/374f0b5214a648d4abc9348570b7ff58/metrics/: metric
mlruns/0/374f0b5214a648d4abc9348570b7ff58/tags/: mlflow.runName
mlruns/0/445eda243d604a248fc5bb513de05d7a/: meta.yaml
mlruns/0/44de1fe6e3c44999ae582d35aea18d3e/: meta.yaml
mlruns/0/5870b880de834a53bffb56ca8d026e42/: meta.yaml
mlruns/0/7c18894c43454b528d94215812cfe631/: meta.yaml
mlruns/0/899a998e1f2a43c4bb61463523173037/: meta.yaml
mlruns/0/a39547b96d874ec388dab78c42ba68d3/: meta.yaml
mlruns/0/a5e760958afc4f74986e5aba0e0426c4/: meta.yaml
mlruns/0/ab96aff2f5d14d128a4886aa93a36097/: meta.yaml
mlruns/0/ae505dc5908e48d69caa3f189e050267/: meta.yaml
mlruns/0/bbbf2bce111a47ec8418fa169bc85a52/: meta.yaml
mlruns/0/c1bbdd83933d47bd950b35ba965ff4d4/: meta.yaml
mlruns/0/e4b14801f7244e2ba729940648694203/: meta.yaml
notebook/: pipeline.ipynb
pipeline/: inference_pipeline.py  mlflow_ui.py  steps.py  training_pipeline.py
pipeline/mlruns/0/: meta.yaml
scripts/: setup.sh
(+106 files in other folders)
